# jewel

./: Cargo.toml  LICENSE.txt  README.md
examples/: README.md
examples/nrf52833/: Cargo.toml
examples/nrf52840/: Cargo.toml
examples/nrf5340/: Cargo.toml  memory.x
examples/nrf5340/.cargo/: config.toml
jewel/: Cargo.toml
jewel-nrf/: Cargo.toml
jewel-nrf/src/: lib.rs
jewel-nrf52840/: Cargo.toml
jewel-nrf52840/src/: lib.rs
jewel/src/: lib.rs
jewel/src/gap/: adv_struct.rs  mod.rs
jewel/src/ll/: address.rs  mod.rs
jewel/src/ll/adv/: pdu.rs
jewel/src/phy/: channel.rs  mod.rs  radio.rs
src/: address.rs  adv_pdu.rs  channel.rs  lib.rs  radio.rs
src/gap/: adv_struct.rs  consts.rs  mod.rs
src/ll/: adv.rs  mod.rs
src/ll/adv/: header.rs  mod.rs  pdu.rs
src/phy/: channel.rs  mod.rs  radio.rs
