[package]
name = "jewel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.5"
embassy-time = { version = "0.3.0",  default-features = false, features = [
    "defmt",
] }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
