[package]
name = "jewel-nrf"
version = "0.1.0"
edition = "2021"

[dependencies]
jewel = { path = "../jewel" }
embassy-nrf = { version = "0.1.0", git = "https://github.com/blueluna/embassy.git", branch = "feat/radio-ieee802154", features = [
    "defmt",
    "time-driver-rtc1",
    "time",
] }

[patch.crates-io]
embassy-time = { version = "0.3.0", git = "https://github.com/blueluna/embassy.git", branch = "feat/radio-ieee802154" }

[features]
nrf52840 = ["embassy-nrf/nrf52840"]
nrf52833 = ["embassy-nrf/nrf52833"]
