[package]
name = "jewel-nrf"
version = "0.1.0"
edition = "2021"

[dependencies]
jewel = { path = "../jewel" }
embassy-nrf = { version = "0.1.0", features = [
    "defmt",
    "time-driver-rtc1",
    "time",
] }

[features]
nrf5340 = ["embassy-nrf/nrf5340-net"]
nrf52840 = ["embassy-nrf/nrf52840"]
nrf52833 = ["embassy-nrf/nrf52833"]
