[package]
name = "jewel"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
description = "BLE for a bare-metal, real-time system."
readme = "README.md"
repository = "https://github.com/jewel-rs/jewel"
keywords = ["nostd", "ble", "embassy"]
categories = ["embedded", "no-std::no-alloc", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.5"
embassy-time = { version = "0.3.0",  default-features = false, features = [
    "defmt",
] }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
