[package]
edition = "2021"
name = "jewel-embassy-nrf52840-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-futures = { version = "0.1.0", git = "https://github.com/guissalustiano/embassy.git", branch = "feat/radio" }
embassy-sync = { version = "0.5.0", git = "https://github.com/guissalustiano/embassy.git", branch = "feat/radio", features = [
    "defmt",
] }
embassy-executor = { version = "0.5.0", git = "https://github.com/guissalustiano/embassy.git", branch = "feat/radio", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.0", git = "https://github.com/guissalustiano/embassy.git", branch = "feat/radio", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-nrf = { version = "0.1.0", git = "https://github.com/guissalustiano/embassy.git", branch = "feat/radio", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "time",
    "radio",
] }

defmt = "0.3"
defmt-rtt = "0.4"

static_cell = { version = "2" }
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
] }
rand = { version = "0.8.4", default-features = false }
serde = { version = "1.0.136", default-features = false }
embedded-hal = { version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-hal-bus = { version = "0.1", features = ["async"] }
jewel = { path = "../.." }

[profile.release]
debug = 2
